--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^24.1.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
   }
