Change to select fields

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^9.0.3",
     "projekt-grupp-2": "file:",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
