--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.3.1",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.3",
+    "@vitest/coverage-c8": "^1.0.0"
   }
 }
