--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "test:unit:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^9.0.3",
@@ -18,13 +19,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitest/coverage-v8": "^2.1.3",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
     "jsdom": "^24.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.3.1",
-    "vitest": "^2.1.3",
-    "@vitest/coverage-c8": "^1.0.0"
+    "vitest": "^2.1.3"
   }
 }
