Refactor test coverage command in package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:unit:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^9.0.3",
