--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.docker.compose.file=backend/compose.yaml
 server.port=9000
 spring.security.oauth2.client.registration.google.client-id=${ID}
 spring.security.oauth2.client.registration.google.client-secret=${SECRET}
+tmdb.access.token=${ACCESS_TOKEN}
