--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "projekt-grupp-2": "file:",
     "tailwindcss": "^3.4.13",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
